accordion bug fix
little symbols at beginning of Title line doesn't work - now turned invisible

--- a/public/css/jsOverrides.css
+++ b/public/css/jsOverrides.css
@@ -48,3 +48,7 @@
   color: black;
 }
 /* simplyscroll */
+/* accordion */
+accordion span span {
+  display: none !important;
+}
